--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "compact-dom",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A set of tools that work with the compact-dom language",
   "repository": {
     "type": "git",
     "url": "https://github.com/AFASSoftware/compact-dom"
   },
-  "main": "dist/node/index.js",
+  "main": "lib/node/index.js",
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.2.0",
@@ -25,6 +25,7 @@
     "gulp-typescript": "^2.8.0",
     "gulp-util": "^3.0.6",
     "istanbul": "^0.3.17",
+    "merge2": "^0.3.6",
     "mocha": "^2.2.5",
     "reflect-metadata": "^0.1.0",
     "require-dir": "^0.3.0",
