--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "compact-dom",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "A set of tools that work with the compact-dom language",
   "repository": {
     "type": "git",
     "url": "https://github.com/AFASSoftware/compact-dom"
   },
-  "main": "lib/node/index.js",
+  "main": "lib/index.js",
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.2.0",
