--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compact-dom",
-  "version": "0.3.1",
+  "version": "0.4.1",
   "description": "A set of tools that work with the compact-dom language",
   "repository": {
     "type": "git",
@@ -9,6 +9,7 @@
   "main": "lib/index.js",
   "license": "MIT",
   "devDependencies": {
+    "browserify": "^11.1.0",
     "chai": "^3.2.0",
     "del": "^1.2.1",
     "gulp": "^3.6.2",
