--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
     "declaration": true,
     "outDir": "build/js",
     "sourceMap": true
-  }
+  },
+  "exclude": [
+    "node_modules", "build"
+  ]
 }
