--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "gulp-tslint": "^3.2.0",
     "gulp-typescript": "^2.8.0",
     "gulp-util": "^3.0.6",
+    "gulp-bump": "^0.1.11",
+    "gulp-filter": "^2.0.0",
+    "gulp-git": "^0.5.5",
+    "gulp-tag-version": "^1.2.1",
     "istanbul": "^0.3.17",
     "merge2": "^0.3.6",
     "mocha": "^2.2.5",
@@ -37,6 +41,7 @@
     "typescript": "^1.5.3",
     "typescript-formatter": "^0.4.3",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "inquirer": "^0.8.0"
   }
 }
